--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         ${PROJECT_SOURCES}
         task.h
         task.cpp
+        tasklist.h
+        tasklist.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET TodoList APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
